Fix: update homebrew before install kubevela client

--- a/docs/en/install.mdx
+++ b/docs/en/install.mdx
@@ -196,6 +196,13 @@ powershell -Command "iwr -useb https://kubevela.io/script/install.ps1 | iex"
 <TabItem value="homebrew">
 
 **macOS/Linux**
+
+Update your brew firstly.
+```shell script
+brew update
+```
+Then install kubevela client.
+
 ```shell script
 brew install kubevela
 ```
