update install guidegst

--- a/docs/en/install.mdx
+++ b/docs/en/install.mdx
@@ -102,7 +102,9 @@ kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/mast
     helm test kubevela -n vela-system
     ```
 
-<details><summary> Click to see the expected output of helm test </summary>
+    <details> <summary> Click to see the expected output of helm test </summary>
+
+    ```shell
     Pod kubevela-application-test pending
     Pod kubevela-application-test pending
     Pod kubevela-application-test running
@@ -122,7 +124,9 @@ kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/mast
     Phase:          Succeeded
     NOTES:
     Welcome to use the KubeVela! Enjoy your shipping application journey!
-</details>
+    ```
+
+    </details>
 
 ## 3. Get KubeVela CLI
 
