add:show & install caps in default center and docs
other things:
* fix #1601 (.md) error
* adjust clean-md.py
* refactor capability install part to reuse code

--- a/docs/en/install.mdx
+++ b/docs/en/install.mdx
@@ -15,7 +15,7 @@ Requirements:
 
 KubeVela relies on Kubernetes as control plane. The control plane could be any managed Kubernetes offering or your own cluster. The only requirement is please ensure [ingress-nginx](https://kubernetes.github.io/ingress-nginx/deploy/) is installed and enabled.
 
-For for local deployment and test, you could use `minikube` or `kind`.
+For local deployment and test, you could use `minikube` or `kind`.
 
 <Tabs
 className="unique-tabs"
