--- a/docs/en/kubectl-plugin.mdx
+++ b/docs/en/kubectl-plugin.mdx
@@ -57,19 +57,20 @@ Usage:
 
 Available Commands:
 
+    comp        Show components in cap center
+    dry-run     Dry Run an application, and output the K8s resources as
+                result to stdout, only CUE template supported for now
+    live-diff   Dry-run an application, and do diff on a specific app
+                revison. The provided capability definitions will be used
+                during Dry-run. If any capabilities used in the app are not
+                found in the provided ones, it will try to find from
+                cluster.
+    show        Show the reference doc for a workload type or trait
+    trait       Show traits in cap center
+    version     Prints out build version information
+
 Flags:
   -h, --help   help for vela
-
-    dry-run  	Dry Run an application, and output the K8s resources as
-             	result to stdout, only CUE template supported for now
-    live-diff	Dry-run an application, and do diff on a specific app
-             	revison. The provided capability definitions will be used
-             	during Dry-run. If any capabilities used in the app are not
-             	found in the provided ones, it will try to find from
-             	cluster.
-    show     	Show the reference doc for a workload type or trait
-    version  	Prints out build version information
-
 
 Use "kubectl vela [command] --help" for more information about a command.
 ```
