--- a/docs/en/install.mdx
+++ b/docs/en/install.mdx
@@ -5,7 +5,7 @@ title:  Installation
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-> For upgrading existing KubeVela, please read the [upgrade guide](./advanced-install#upgrade).
+> For upgrading existing KubeVela, please read the [upgrade guide](./advanced-install/#upgrade).
 
 ## 1. Choose Control Plane Cluster
 
