use custom domain for vela charts

--- a/docs/en/install.mdx
+++ b/docs/en/install.mdx
@@ -82,7 +82,7 @@ kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/mast
 
 1. Add helm chart repo for KubeVela
     ```shell script
-    helm repo add kubevela https://kubevelacharts.oss-accelerate.aliyuncs.com/core
+    helm repo add kubevela https://charts.kubevela.net/core
     ```
 
 2. Update the chart repo
