arrange docs for kubectl plugin，fix #1721

--- a/docs/en/developers/references/kubectl-plugin.mdx
+++ b/docs/en/developers/references/kubectl-plugin.mdx
@@ -1,5 +1,5 @@
 ---
-title: Install kubectl plugin
+title: Kubectl plugin
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
@@ -57,7 +57,7 @@ Usage:
 
 Available Commands:
 
-    comp        Show components in cap center
+    comp        Show components in capability registry
     dry-run     Dry Run an application, and output the K8s resources as
                 result to stdout, only CUE template supported for now
     live-diff   Dry-run an application, and do diff on a specific app
@@ -66,7 +66,7 @@ Available Commands:
                 found in the provided ones, it will try to find from
                 cluster.
     show        Show the reference doc for a workload type or trait
-    trait       Show traits in cap center
+    trait       Show traits in capability registry
     version     Prints out build version information
 
 Flags:
