--- a/docs/en/install.mdx
+++ b/docs/en/install.mdx
@@ -132,7 +132,7 @@ kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/mast
 
 KubeVela CLI gives you a simplified workflow to manage applications with optimized output. It is not mandatory though.
 
-KubeVela CLI could be [installed as kubectl plugin](./kubectl-plugin.mdx), or install as standalone binary.
+KubeVela CLI could be [installed as kubectl plugin](./advanced-install#install-kubectl-vela-plugin), or install as standalone binary.
 
 <Tabs
     className="unique-tabs"
